manifests/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: ecommerce-mtls
  namespace: ecommerce
spec:
  mtls:
    mode: STRICT
